// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Img > loads the item context 1`] = `
<body>
  <div>
    <img
      alt="cute hamster"
      src="assets/hamster.png"
    />
    
  </div>
</body>
`;

exports[`Img > renders correctly with no props 1`] = `
<body>
  <div>
    <img />
  </div>
</body>
`;

exports[`Img > renders correctly with src and alt and data-serial 1`] = `
<body>
  <div>
    <img
      alt="cute cate"
      data-serial="123"
      src="assets/cat.png"
    />
  </div>
</body>
`;

exports[`Img > resolves image src through the asset manager 1`] = `
<body>
  <div>
    <img
      src="http://localhost/assets/pig.png"
    />
    
  </div>
</body>
`;
